--- a/.github/workflows/run_europa_2.yml
+++ b/.github/workflows/run_europa_2.yml
@@ -1,4 +1,4 @@
-name: Run LLM Pipeline 1
+name: Run Europa Pipeline Attack second half
 
 on:
   workflow_dispatch:  # Manual trigger
@@ -22,11 +22,11 @@ jobs:
 
       - name: Run the script
         env:
-          GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY_1 }}
-          LLM_JUDGE_KEY: ${{ secrets.GEMINI_API_KEY_1 }}
+          GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY_4 }}
+          LLM_JUDGE_KEY: ${{ secrets.GEMINI_API_KEY_4 }}
         working-directory: Pipeline
         run: |
-          python evaluation_pipeline.py xquad "['en', 'el', 'ar', 'zh', 'tr', 'ru', 'th']"  200 1 google 0 $LLM_JUDGE_KEY $GEMINI_API_KEY
+          python evaluation_pipeline.py europa_random_split "['mt', 'fr', 'sv']" 200  1 google 14 $LLM_JUDGE_KEY $GEMINI_API_KEY
 
       - name: Upload results
         uses: actions/upload-artifact@v4
